--- a/test/fixtures/publishers.yml
+++ b/test/fixtures/publishers.yml
@@ -57,6 +57,24 @@ top_referrer:
   selected_wallet_provider: top_referrer_connected (UpholdConnection)
   feature_flags: <%= { UserFeatureFlags::REFERRAL_ENABLED_OVERRIDE => true }.to_json %>
 
+top_referrer_gemini:
+  email: "top_referrer_gemini@hello.org"
+  two_factor_prompted_at: "<%= 1.day.ago %>"
+  agreed_to_tos: "<%= 1.day.ago %>"
+  default_currency_confirmed_at: "<%= DateTime.now %>"
+  subscribed_to_marketing_emails: true
+  selected_wallet_provider: top_referrer_gemini_connected (GeminiConnection)
+  feature_flags: <%= { UserFeatureFlags::REFERRAL_ENABLED_OVERRIDE => true }.to_json %>
+
+top_referrer_bitflyer:
+  email: "top_referrer_bitflyer@hello.org"
+  two_factor_prompted_at: "<%= 1.day.ago %>"
+  agreed_to_tos: "<%= 1.day.ago %>"
+  default_currency_confirmed_at: "<%= DateTime.now %>"
+  subscribed_to_marketing_emails: true
+  selected_wallet_provider: top_referrer_bitflyer_connected (BitflyerConnection)
+  feature_flags: <%= { UserFeatureFlags::REFERRAL_ENABLED_OVERRIDE => true }.to_json %>
+
 gemini_completed:
   email: "gemini@completed.org"
   name: "Gemini the Completed"
