--- a/test/fixtures/channels.yml
+++ b/test/fixtures/channels.yml
@@ -27,6 +27,7 @@ top_referrer_bitflyer_channel:
   publisher: top_referrer_bitflyer
   details: top_referrer_bitflyer_verified_details (SiteChannelDetails)
   verified: true
+  deposit_id: 'bitflyer_enabled_channel123'
 
 verified_exclude:
   publisher: medium_media_group
