--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "brave-ui": "^0.38.0",
     "chart.js": "^2.7.2",
     "clipboard": "^2.0.1",
+    "dompurify": "^2.3.3",
     "is-accessor-descriptor": "3.0.1",
     "js-yaml": "3.13.1",
     "kind-of": "^6.0.3",
