PR feedback: Make Gemini Channel Recipient IDs like Uphold
Uphold uses a join table to represent deposit IDs/ cards per channel.
We can do the same for Gemini. Currently Bitflyer sticks the deposit ID
on the channel, so it will be next for converting over to this join
table style.

--- a/test/fixtures/channels.yml
+++ b/test/fixtures/channels.yml
@@ -324,8 +324,12 @@ gemini_not_completed_website:
 gemini_completed_website:
   publisher: gemini_completed
   verified: true
-  gemini_recipient_id: '2134'
   details: gemini_completed_website_details (SiteChannelDetails)
+
+gemini_in_japan_completed_website:
+  publisher: gemini_in_japan
+  verified: true
+  details: gemini_in_japan_website_details (SiteChannelDetails)
 
 bitflyer_enabled_channel:
   publisher: bitflyer_enabled
