--- a/test/fixtures/site_channel_details.yml
+++ b/test/fixtures/site_channel_details.yml
@@ -182,5 +182,8 @@ gemini_not_completed_website_details:
 gemini_completed_website_details:
   brave_publisher_id: "gemini_completed_website_details.org"
 
+gemini_in_japan_website_details:
+  brave_publisher_id: "gemini_in_japan_website_details.org"
+
 bitflyer_completed_website_details:
   brave_publisher_id: "bitflyer_completed_website_details.org"
