Add gemini recipient IDs to channels (#3396)
* Add gemini recipient IDs to channels

* Fix tests

* PR feedback: Make Gemini Channel Recipient IDs like Uphold

Uphold uses a join table to represent deposit IDs/ cards per channel.
We can do the same for Gemini. Currently Bitflyer sticks the deposit ID
on the channel, so it will be next for converting over to this join
table style.

* Update app/jobs/create_gemini_recipient_ids_job.rb

Co-authored-by: Albert Wang <amwang217@gmail.com>

* Update app/jobs/create_gemini_recipient_ids_job.rb

Co-authored-by: Albert Wang <amwang217@gmail.com>

* PR Feedback

* Remove multiple currency support from gemini wallets

* Update app/jobs/create_gemini_recipient_ids_job.rb

Co-authored-by: Albert Wang <amwang217@gmail.com>

* PR feedback

* Use strings to avoid loading problems

* Update db/migrate/20210928154029_create_gemini_connection_for_channel.rb

Co-authored-by: Albert Wang <amwang217@gmail.com>

* Remove unnecessary indices

* Remove extraneous index

* Revert "Remove extraneous index"

This reverts commit 297c76d76cbaab5f7ef2aa4b3ad0b3dd1ec0374d.

Co-authored-by: Albert Wang <amwang217@gmail.com>

--- a/test/fixtures/channels.yml
+++ b/test/fixtures/channels.yml
@@ -326,6 +326,11 @@ gemini_completed_website:
   verified: true
   details: gemini_completed_website_details (SiteChannelDetails)
 
+gemini_in_japan_completed_website:
+  publisher: gemini_in_japan
+  verified: true
+  details: gemini_in_japan_website_details (SiteChannelDetails)
+
 bitflyer_enabled_channel:
   publisher: bitflyer_enabled
   details: bitflyer_enabled_details (SiteChannelDetails)
