--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,4 +75,4 @@ jobs:
       - name: Brakeman
         run: bundle exec brakeman
       - name: Standard
-        run: bundle exec standard
+        run: bundle exec standardrb
