--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,5 +76,7 @@ jobs:
         run: bundle exec brakeman
       - name: Standard
         run: bundle exec standardrb
+      - name: Sorbet Linter
+        run: rubocop --require rubocop-sorbet -c .rubocop-sorbet.yml
       - name: Sorbet Type Check
         run: bundle exec srb tc
