Add ci task for running tests/lint locally

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "./pre-commit.sh"
+      "pre-commit": "./pre-commit.sh",
+      "pre-push": "./pre-push.sh"
     }
   },
   "jest": {
