Add test for new public url

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -215,6 +215,8 @@ test:
   bitflyer_client_id: "client_id_abc123"
   bitflyer_client_secret: "client_secret_123abc"
   bitflyer_scope: "some_scope"
+  # AWS for pcdn
+  s3_rewards_public_domain: "https://TESTDOMAIN.com"
 
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
