--- a/test/fixtures/bitflyer_connections.yml
+++ b/test/fixtures/bitflyer_connections.yml
@@ -1,6 +1,6 @@
 enabled_bitflyer_connection:
-  publisher: bitflyer_enabled
-  recipient_id: 'bitflyer_enabled_connectionABC'
+  publisher: bitflyer_pub
+  recipient_id: 'bitflyer_pub_connectionABC'
   <% salt = SecureRandom.random_bytes(12) %>
   encrypted_access_token:  "<%= TotpRegistration.encrypt_secret(
     'access_token',
