--- a/test/fixtures/publishers.yml
+++ b/test/fixtures/publishers.yml
@@ -361,22 +361,13 @@ publisher_selected_wallet_provider:
   two_factor_prompted_at: "<%= 1.day.ago %>"
   default_currency_confirmed_at: "<%= 1.day.ago %>"
 
-bitflyer_enabled:
-  email: "bitflyer_enabled@brave.com"
-  name: "Bitflyer Enabled"
+bitflyer_pub:
+  email: "bitflyer_pub@brave.com"
+  name: "Bitflyer Pub"
   agreed_to_tos: "<%= 1.day.ago %>"
   two_factor_prompted_at: "<%= 1.day.ago %>"
   default_currency_confirmed_at: "<%= 1.day.ago %>"
-  feature_flags: <%= { UserFeatureFlags::BITFLYER_ENABLED => true }.to_json %>
   selected_wallet_provider: enabled_bitflyer_connection (BitflyerConnection)
-
-bitflyer_not_enabled:
-  email: "bitflyer_not_enabled@brave.com"
-  name: "Bitflyer Not Enabled"
-  agreed_to_tos: "<%= 1.day.ago %>"
-  two_factor_prompted_at: "<%= 1.day.ago %>"
-  default_currency_confirmed_at: "<%= 1.day.ago %>"
-  feature_flags: <%= { UserFeatureFlags::BITFLYER_ENABLED => false }.to_json %>
 
 bitflyer_suspended:
   email: "bitflyer_suspended@completed.org"
