S3 changes to test in staging

--- a/config/storage/staging.yml
+++ b/config/storage/staging.yml
@@ -1,14 +1,16 @@
 amazon_internal_bucket:
   service: S3
-  access_key_id: <%= ENV['S3_PUBLISHERS_ACCESS_KEY_ID'] %>
-  secret_access_key: <%= ENV['S3_PUBLISHERS_SECRET_ACCESS_KEY'] %>
   region: <%= ENV['S3_PUBLISHERS_BUCKET_REGION'] %>
   bucket: <%= ENV['S3_PUBLISHERS_BUCKET_NAME'] %>
+  upload:
+    grant_full_control: <%= ENV["S3_CANONICAL_ID"] %>
+    grant_read: <%= ENV["REWARDS_CDN_CANONICAL_ID"] %>
+
 
 amazon_public_bucket:
   service: S3
-  access_key_id: <%= ENV['S3_REWARDS_ACCESS_KEY_ID'] %>
-  secret_access_key: <%= ENV['S3_REWARDS_SECRET_ACCESS_KEY'] %>
   region: <%= ENV['S3_REWARDS_BUCKET_REGION'] %>
   bucket: <%= ENV['S3_REWARDS_BUCKET_NAME'] %>
-  
+  upload:
+    grant_full_control: <%= ENV["S3_CANONICAL_ID"] %>
+    grant_read: <%= ENV["REWARDS_CDN_CANONICAL_ID"] %>
