--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,12 +62,14 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
       - name: Yarn install
         run: yarn --frozen-lockfile
+      - name: Yarn audit
+        run: yarn audit
       - name: Prepare database
         run: RAILS_ENV=test bundle exec rake db:prepare
         env:
           DATABASE_URL_TEST: postgres://postgres:postgres@localhost:5432/brave_publishers_test
-      - name: Bundler Audit Update
-        run: bundle exec bundle-audit update
+      - name: Bundler Audit
+        run: bundle exec bundle-audit check --update
       - name: Run tests
         run: RAILS_ENV=test bundle exec rails test
         env:
