--- a/public/creators-landing/package.json
+++ b/public/creators-landing/package.json
@@ -39,6 +39,12 @@
     ]
   },
   "resolutions": {
-    "lodash": "4.17.19"
+    "lodash": "4.17.21",
+    "nth-check": "2.0.1",
+    "browserslist": "4.16.5",
+    "glob-parent": "5.1.2",
+    "ansi-regex": "5.0.1",
+    "ansi-html": "https://registry.npmjs.org/ansi-html-community/-/ansi-html-community-0.0.8.tgz",
+    "immer": "9.0.6"
   }
 }
