Replace yarn audit with configurable one
Most of the errors we see coming from yarn audit are for dev dependencies
which have no impact in production. See:

https://github.com/rails/webpacker/issues/2969#issuecomment-838417006
and
https://github.com/rails/webpacker/issues/3017#issuecomment-840855095

We need to be able to suppress warnings which do not apply.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,7 +73,7 @@ jobs:
       - name: Brakeman
         run: bundle exec brakeman
       - name: Yarn audit
-        run: yarn audit && yarn --cwd public/creators-landing audit
+        run: npx audit-ci --config .audit-ci.json && (cd public/creators-landing && npx audit-ci --config ../../.audit-ci.json)
       - name: Bundler Audit
         run: bundle exec bundle-audit check --update
       - name: Sorbet Linter
