--- a/package.json
+++ b/package.json
@@ -55,22 +55,9 @@
     "preset": "ts-jest/presets/js-with-babel"
   },
   "dependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-env": "^7.2.3",
-    "@babel/preset-react": "^7.0.0",
     "@rails/activestorage": "^6.0.3-1",
     "@rails/ujs": "^6.0.3-1",
-    "@rails/webpacker": "^5.4.2",
-    "@types/react": "^16.4.7",
-    "@types/react-dom": "^16.0.6",
     "axios": "^0.21.2",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-react": "^6.24.1",
     "brave-ui": "^0.38.0",
     "chart.js": "^2.7.2",
     "clipboard": "^2.0.1",
@@ -79,7 +66,6 @@
     "js-yaml": "3.13.1",
     "kind-of": "^6.0.3",
     "moment": "^2.25.0",
-    "node-sass": "^6.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-avatar-editor": "^11.0.4",
@@ -88,10 +74,7 @@
     "react-select": "^3.0.8",
     "react-tooltip": "^4.2.3",
     "styled-components": "5.1.0",
-    "tributejs": "^3.7.1",
-    "ts-loader": "^5.3.0",
-    "typescript": "^4.3.5",
-    "webpack-cli": "^3.3.11"
+    "tributejs": "^3.7.1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.6",
@@ -118,7 +101,25 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1",
     "tslint-react": "^3.6.0",
-    "webpack-dev-server": "^4.2.0"
+    "webpack-dev-server": "^4.2.0",
+    "audit-ci": "4.x",
+    "typescript": "^4.3.5",
+    "ts-loader": "^5.3.0",
+    "@types/react": "^16.4.7",
+    "@types/react-dom": "^16.0.6",
+    "webpack-cli": "^3.3.11",
+    "node-sass": "^6.0.1",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-react": "^6.24.1",
+    "@rails/webpacker": "^5.4.3",
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0"
   },
   "resolutions": {
     "node-fetch": "2.6.1",
