--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -14,9 +14,17 @@
     cron: "42 1 * * *"
     decription: "For Site Channels created within the past week, enqueue jobs to verify the domain of each unique brave_publisher_id."
     queue: scheduler
-  EnqueueEmailsForPromoPublishersJob:
+  EnqueueNightlyEmailsForPromoPublishersJob:
+    class: EnqueueEmailsForPromoPublishersJob
     cron: "0 4 * * *"
-    decription: "For emails for promo publishers job"
+    args: [ 'nightly' ]
+    decription: "For nightly breakdown stats sent to top referrers"
+    queue: scheduler
+  EnqueueMonthlyEmailsForPromoPublishersJob:
+    class: EnqueueEmailsForPromoPublishersJob
+    cron: "0 0 1 * *"
+    args: [ 'monthly' ]
+    decription: "For monthly breakdown stats sent to top referrers including the last 4 months of data"
     queue: scheduler
   CleanStaleUpholdDataJob:
     cron: "0 4 * * *"
@@ -54,13 +62,6 @@
     cron: "50 2 * * *"
     description: "Refreshes the redis cache for eyeshade stats information"
     queue: scheduler
-  CleanAbandonedSiteChannelsJob:
-    cron: "0 3 * * *"
-    description: "Remove abandoned site channels."
-  CleanStaleUpholdDataJob:
-    cron: "0 4 * * *"
-    description: "For Publishers who have stale uphold codes or access parameters, clean out uphold codes or access parameter."
-    queue: scheduler
   Sync::Bitflyer::UpdateMissingDepositsJob:
     cron: "0 4 * * *"
     description: "For bitflyer channels missing their deposit IDs"
@@ -70,12 +71,13 @@
     args: ['send_notifications']
     description: "Notifies publishers their wallet is disconnected on the 23rd of every month."
     queue: scheduler
-  EnqueuePublishersForPayoutJob:
+  EnqueuePublishersForPayoutJobMonthly:
+    class: EnqueuePublishersForPayoutJob
     cron: "0 0 1 * *"
     description: "Generates the list of unsettled transactions on the first of every month"
     queue: scheduler
   SetPayoutsInProgressJob:
-    cron: "0 0 1 * *"
+    cron: "0 0 12 * *"
     description: "Sets a flag in redis which tells the app to display 'payout in progress' at the beginning of the month."
     queue: scheduler
 :verbose: true
