--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -46,7 +46,7 @@ RUN curl --silent -o-  https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.3/inst
 RUN npm install -g yarn
 RUN yarn cache clean
 RUN yarn install --verbose
-RUN apt-get install chromium -y
+#RUN apt-get install chromium -y
 
 EXPOSE 3000
 CMD ["bundle", "exec", "rails","server","-b","0.0.0.0","-p","3000"]
