task: Allow external network configuration for bat-ledgers
This allows us to directly access bat-ledgers from within the
 docker network interface rather than relying on the localhost
 interface.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,9 @@ services:
       SENDGRID_SMTP_SERVER: mailcatcher
       DATABASE_CLEANER_ALLOW_REMOTE_DATABASE_URL: "true"
     command: sh -c "rm -f tmp/pids/server.pid && ./scripts/entrypoint.sh && bundle exec rails s"
+    networks:
+      - default
+      - ledger # Configured in bat-ledgers docker-compose.file. Allows local access to ledgers containers via docker networking interface
     depends_on:
       - postgres
       - redis
@@ -46,6 +49,11 @@ services:
     ports: []
     depends_on:
       - web
+networks:
+  ledger:
+    external: true
 
 volumes:
   db-data:
+
+
