--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -43,7 +43,7 @@ RUN curl --silent -o-  https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.3/inst
   && nvm alias default $NODE_VERSION \
   && nvm use default
 
-RUN apt-get install -y python
+RUN apt-get install -y python3
 RUN npm install -g yarn
 RUN yarn cache clean
 RUN yarn install --verbose
