--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "preset": "ts-jest/presets/js-with-babel"
   },
   "dependencies": {
+    "@github/webauthn-json": "^0.6.6",
     "@rails/activestorage": "^6.0.3-1",
     "@rails/ujs": "^6.0.3-1",
     "axios": "^0.21.2",
@@ -74,15 +75,28 @@
     "react-select": "^3.0.8",
     "react-tooltip": "^4.2.3",
     "styled-components": "5.1.0",
-    "tributejs": "^3.7.1",
-    "@github/webauthn-json": "^0.6.6"
+    "tributejs": "^3.7.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "@rails/webpacker": "^5.4.3",
     "@types/jest": "^24.0.6",
+    "@types/react": "^16.4.7",
+    "@types/react-dom": "^16.0.6",
     "@types/styled-components": "^5.1.0",
+    "audit-ci": "4.x",
     "autoprefixer": "^9.4.3",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.10.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-react": "^6.24.1",
     "cssnano": "^5.0.2",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -90,6 +104,7 @@
     "hoek": "^6.0.1",
     "husky": "^7.0.2",
     "jest-styled-components": "^7.0.2",
+    "node-sass": "^7.0.0",
     "prettier": "1.16.3",
     "stylelint": "^13.3.0",
     "stylelint-config-recommended-scss": "^4.2.0",
@@ -98,29 +113,14 @@
     "stylelint-scss": "^3.16.0",
     "sugarss": "^2.0.0",
     "ts-jest": "^25.0.0",
+    "ts-loader": "^5.3.0",
     "tslint": "^5.14.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1",
     "tslint-react": "^3.6.0",
-    "webpack-dev-server": "^4.2.0",
-    "audit-ci": "4.x",
     "typescript": "^4.3.5",
-    "ts-loader": "^5.3.0",
-    "@types/react": "^16.4.7",
-    "@types/react-dom": "^16.0.6",
     "webpack-cli": "^3.3.11",
-    "node-sass": "^7.0.0",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-react": "^6.24.1",
-    "@rails/webpacker": "^5.4.3",
-    "@babel/core": "^7.8.7",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-env": "^7.2.3",
-    "@babel/preset-react": "^7.0.0"
+    "webpack-dev-server": "^4.7.4"
   },
   "resolutions": {
     "node-fetch": "2.6.7",
