--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,12 +7,7 @@
 
 name: Lint
 
-on:
-  push:
-    branches: [ master, staging, dev ]
-  pull_request:
-    branches: [ master, staging ]
-
+on: [push]
 jobs:
   lint:
     runs-on: ubuntu-latest
