--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -47,7 +47,7 @@ RUN apt-get install -y python3
 RUN npm install -g yarn
 RUN yarn cache clean
 RUN yarn install --verbose
-#RUN apt-get install chromium -y
+RUN apt-get install chromium --fix-missing -y 
 
 EXPOSE 3000
 CMD ["bundle", "exec", "rails","server","-b","0.0.0.0","-p","3000"]
