--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,13 +6,7 @@
 # For more information see: https://github.com/marketplace/actions/setup-ruby-jruby-and-truffleruby
 
 name: Test
-
-on:
-  push:
-    branches: [ master, staging, dev ]
-  pull_request:
-    branches: [ master, staging ]
-
+on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -29,7 +23,6 @@ jobs:
           --health-timeout 5s
           --health-retries 5
     steps:
-
       - uses: actions/checkout@v2
       - uses: actions/cache@v2
         with:
