--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -6,11 +6,7 @@
 # For more information see: https://github.com/marketplace/actions/setup-ruby-jruby-and-truffleruby
 
 name: Audit
-on:
-  pull_request:
-    branches:
-      - master
-      - staging
+on: [pull_request]
 jobs:
   audit:
     runs-on: ubuntu-latest
