--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,7 +7,12 @@
 
 name: Lint
 
-on: [push]
+on:
+  push:
+    branches: [ master, staging, dev ]
+  pull_request:
+    branches: [ master, staging ]
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -65,3 +70,8 @@ jobs:
         run: bundle exec standardrb
       - name: Brakeman
         run: bundle exec brakeman
+      - name: Yarn audit
+        run: npx audit-ci --config .audit-ci.json && (cd public/creators-landing && npx audit-ci --config ../../.audit-ci.json)
+      - name: Bundler Audit
+        run: bundle exec bundle-audit check --update
+
