task: Actions Updates
Run `test` on all pushes.  Run `audit` on push to staging.

--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -7,8 +7,8 @@
 
 name: Audit
 on:
-  pull_request:
-    branches: [ master ]
+  push:
+    branches: [ staging ]
 jobs:
   audit:
     runs-on: ubuntu-latest
