feat: Bitflyer refresh flow

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -211,7 +211,7 @@ test:
   sendgrid_publishers_list_id: 3986776
   slack_webhook_url: false
   # Bitflyer env variables
-  bitflyer_host: "https:://localhost/bitflyertest"
+  bitflyer_host: "https://localhost/bitflyertest"
   bitflyer_client_id: "client_id_abc123"
   bitflyer_client_secret: "client_secret_123abc"
   bitflyer_scope: "some_scope"
