--- a/config/services.yml
+++ b/config/services.yml
@@ -3,8 +3,8 @@ default: &default
   gemini:
     api_uri: <%= ENV["GEMINI_API"] || "https://api.sandbox.gemini.com" %>
     oauth_uri: <%= ENV["GEMINI_OAUTH_API"] || "https://exchange.sandbox.gemini.com" %>
-    client_id: <%= ENV["GEMINI_CLIENT_ID"] %> 
-    client_secret: <%= ENV["GEMINI_CLIENT_SECRET"] %> 
+    client_id: <%= ENV["GEMINI_CLIENT_ID"] || 'fake-client-id' %> 
+    client_secret: <%= ENV["GEMINI_CLIENT_SECRET"] || 'fake-client-secret' %> 
   stripe:
     publishable_key: <%= ENV["STRIPE_PUBLISHABLE_KEY"] %>
     client_id: <%= ENV["STRIPE_CLIENT_ID"] %>
@@ -12,13 +12,6 @@ default: &default
 
 test:
   <<: *default
-  # In our test files we should ensure we're mocking all these requests.
-  # So we're going to be passing invalid URLs so if any of our tests aren't mocked then Faraday will raise an exception.
-  gemini:
-    api_uri: https://api.gemini.fake
-    oauth_uri: https://exchange.gemini.fake
-    client_id: <%= ENV["GEMINI_CLIENT_ID"] || "fake-client-id" %> 
-    client_secret: <%= ENV["GEMINI_CLIENT_SECRET"] || "fake-client-secret" %> 
 
 development:
   <<: *default
