improvmement: Consolidate Oauth2 config

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -79,6 +79,10 @@ default: &default
   bitflyer_client_secret: <%= ENV["BITFLYER_CLIENT_SECRET"] %>
   bitflyer_scope: <%= ENV["BITFLYER_SCOPE"] %>
 
+  # gemini
+  gemini_client_id: <%= ENV["GEMINI_CLIENT_ID"] %>
+  gemini_client_secret: <%= ENV["GEMINI_CLIENT_SECRET"] %>
+
   # Use offline mode of publisher host inspector
   host_inspector_offline: <%= ENV["HOST_INSPECTOR_OFFLINE"] %>
   terms_of_service_url: <%= ENV["TERMS_OF_SERVICE_URL"] %>
@@ -192,6 +196,10 @@ test:
   uphold_scope: cards:read,cards:write,user:read
   uphold_api_uri: "https://uphold-api.example.com"
   uphold_dashboard_url: "https://sandbox.example.com/dashboard"
+  # gemini
+  gemini_client_id: test_client_id
+  gemini_client_secret: test_client_secret
+
   # Social media links
   bat_medium_url: "https://medium.com/@attentiontoken"
   bat_twitter_url: "https://twitter.com/@attentiontoken"
