task: Clarify .env.docker.dev usage via filename

--- a/.env.docker.dev
+++ b/.env.docker.dev
@@ -1,3 +1,5 @@
+# .env configuration file for docker-compose context
+
 # Admin notifications get sent here.
 INTERNAL_EMAIL="admin@publishers.local"
 
