--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - .:/var/www
     ports:
       - "3000:3000"
-    env_file: .env.example
+    env_file: .env.docker.dev
 
   postgres:
     image: postgres:12-alpine
