--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -59,7 +59,6 @@ jobs:
         run: yarn --frozen-lockfile
       - name: Yarn audit
         run: npx audit-ci --config .audit-ci.json && (cd public/creators-landing && npx audit-ci --config ../../.audit-ci.json)
-          # Temp to unblock prod patch
-#      - name: Bundler Audit
-#        run: bundle exec bundle-audit check --update
+      - name: Bundler Audit
+        run: bundle exec bundle-audit check --update
 
