task: Persist node_modules on container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - redis
     volumes:
       - .:/var/www
+      - /var/www/node_modules
     ports:
       - "3000:3000"
     env_file: .env.docker.dev
