--- a/public/creators-landing/package.json
+++ b/public/creators-landing/package.json
@@ -39,6 +39,7 @@
     ]
   },
   "resolutions": {
+    "ejs": "3.1.7",
     "lodash": "4.17.21",
     "nth-check": "2.0.1",
     "browserslist": "4.16.5",
