improvement: Link to github commit

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -168,7 +168,7 @@ development:
   brave_website_url: "https://brave.com"
   max_site_age: 6
   should_send_notifications: true
-  slack_webhook_url: false
+  slack_webhook_url: <%= ENV["SLACK_WEBHOOK_URL"] %>
 
 test:
   <<: *default
