improvement: Limit creation of site channels to configurable default

--- a/test/fixtures/site_channel_details.yml
+++ b/test/fixtures/site_channel_details.yml
@@ -4,6 +4,9 @@ default_details:
 new_site_details:
   brave_publisher_id_unnormalized: "new_site.org"
 
+new_site_details2:
+  brave_publisher_id: "newsite.org"
+
 top_referrer_verified_details:
   brave_publisher_id: "top-referrer.com"
 
