--- a/test/fixtures/channels.yml
+++ b/test/fixtures/channels.yml
@@ -13,6 +13,11 @@ verified:
   details: verified_details (SiteChannelDetails)
   verified: true
 
+verified_blocked_country:
+  publisher: verified_blocked_country
+  details: verified_blocked_country_details (SiteChannelDetails)
+  verified: true
+
 top_referrer_channel:
   publisher: top_referrer
   details: top_referrer_verified_details (SiteChannelDetails)
