perf: Hopefully make this job not crash all the things

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -37,7 +37,7 @@
     cron: "0 8 * * *"
     description: "Complete transfer of channels that have exceeded their timeout time without being rejected"
   Sync::ChannelPromoRegistrationsStatsJob:
-    cron: "0 2 * * *"
+    cron: "*/2 * * * *"
     description: "Sync stats for channel owned referral codes with the promo server every morning."
   TwoFactorAuthenticationRemovalJob:
     cron: "0 12 * * *"
