feat: exclude blocked wallet addresses from PCDN (#3831)
* feat: exclude blocked wallet addresses from PCDN

* chore: run standardrb fix

* update fixtures

* update tests

* move rewards call to /lib

* Refactor rewards service, add types, update tests

* add error handling and cleanup lint issue

* revert gemfile.lock, update sorbet types

* update prefix job

* Add test coverage for fail state

* remove updated gemfile

* fix lint error

Co-authored-by: Jennifer Byrne <jenniferbyrne@Jennifers-MacBook-Pro.local>

--- a/test/fixtures/publishers.yml
+++ b/test/fixtures/publishers.yml
@@ -19,6 +19,14 @@ verified:
   name: "Alice the Verified"
   selected_wallet_provider: verified_connection (UpholdConnection)
 
+verified_blocked_country:
+  <<: *default
+  default_site_banner_id: "00000000-0000-0000-0000-000000000009"
+  default_site_banner_mode: true
+  email: "vn@verified.org"
+  name: "Vn the Verified"
+  selected_wallet_provider: verified_blocked_country_connection (UpholdConnection)
+
 notes:
   <<: *default
   email: "alice@notes.org"
