--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -194,7 +194,7 @@ test:
   uphold_client_id: test_client_id
   uphold_client_secret: test_client_secret
   uphold_scope: cards:read,cards:write,user:read
-  uphold_api_uri: "https://uphold-api.example.com"
+  uphold_api_uri: "https://api-sandbox.uphold.com"
   uphold_dashboard_url: "https://sandbox.example.com/dashboard"
   # gemini
   gemini_client_id: test_client_id
