update rewards api endpoint

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -28,6 +28,8 @@ default: &default
   attr_encrypted_key_old: <%= ENV["ATTR_ENCRYPTED_KEY_OLD"] %>
   bat_ratios_token: <%= ENV["BAT_RATIOS_TOKEN"] %>
   bat_ratios_url: <%= ENV["BAT_RATIOS_URL"] %>
+  # Rewards API
+  api_rewards_base_uri: <% ENV["API_REWARDS_BASE_URI"] %>
   # Optional. If present protects the app with HTTP Basic Auth.
   basic_auth_password: <%= ENV["BASIC_AUTH_PASSWORD"] %>
   basic_auth_user: <%= ENV["BASIC_AUTH_USER"] %>
@@ -158,6 +160,7 @@ development:
   uphold_dashboard_url: <%= ENV["UPHOLD_DASHBOARD_URL"] || "https://sandbox.uphold.com/dashboard" %>
   paypal_connect_uri: https://sandbox.paypal.com
   fee_rate: 0.05
+  api_rewards_base_uri: "https://api.rewards.brave.com"
 
   # Social media links
   bat_medium_url: "https://medium.com/@attentiontoken"
@@ -225,6 +228,7 @@ test:
   bitflyer_scope: "some_scope"
   # AWS for pcdn
   s3_rewards_public_domain: "https://TESTDOMAIN.com"
+  api_rewards_base_uri: "https://api.rewards.brave.com"
 
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
