fix typo in secrets file

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -29,7 +29,7 @@ default: &default
   bat_ratios_token: <%= ENV["BAT_RATIOS_TOKEN"] %>
   bat_ratios_url: <%= ENV["BAT_RATIOS_URL"] %>
   # Rewards API
-  api_rewards_base_uri: <% ENV["API_REWARDS_BASE_URI"] %>
+  api_rewards_base_uri: <%= ENV["API_REWARDS_BASE_URI"] %>
   # Optional. If present protects the app with HTTP Basic Auth.
   basic_auth_password: <%= ENV["BASIC_AUTH_PASSWORD"] %>
   basic_auth_user: <%= ENV["BASIC_AUTH_USER"] %>
