.reviewdog: use commit as a source of truth for file selection

--- a/.reviewdog.yml
+++ b/.reviewdog.yml
@@ -13,8 +13,9 @@ runner:
         -c p/secrets \
         $(find semgrep_rules -name '*.yml' | sed 's/^/-c /g') \
         --metrics=off \
-        --json $(git --no-pager diff --name-only HEAD $(git merge-base HEAD origin/${GITHUB_BASE_REF:-staging}) | xargs ls -d 2>/dev/null) \
-        | jq -r '.results[] | "\(.extra.severity[0:1]):\(.path):\(.end.line) \(.extra.message)"' \
+        --baseline-commit origin/${GITHUB_BASE_REF:-staging} \
+        --json \
+        jq -r '.results[] | "\(.extra.severity[0:1]):\(.path):\(.end.line) \(.extra.message)"' \
         | sed 's/$/ (Cc @brave\/sec-team @thypon)/g' | tee semgrep.log &&\
         find semgrep.log -type f -empty -delete
     errorformat:
