--- a/test/fixtures/publishers.yml
+++ b/test/fixtures/publishers.yml
@@ -52,6 +52,15 @@ verified_totp_only:
   email: "alice_totp@verified.org"
   name: "Alice the Verified TOTP User"
 
+verified_with_blocked_country_exception:
+  <<: *default
+  default_site_banner_id: "00000000-0000-0000-0000-000000000029"
+  default_site_banner_mode: true
+  email: "DJ@verified.org"
+  name: "DJ the Verified"
+  blocked_country_exception: true
+  selected_wallet_provider: verified_blocked_country_exemption_connection (UpholdConnection)
+
 browser_user:
   role: "<%= Publisher::BROWSER_USER %>"
 
