--- a/test/fixtures/site_banners.yml
+++ b/test/fixtures/site_banners.yml
@@ -22,6 +22,14 @@ verified_blocked_country_default_banner: &verified_default_banner
   donation_amounts: [1, 10, 100]
   default_donation: 5
 
+verified_blocked_country_with_exception_default_banner: &verified_default_banner
+  id: "00000000-0000-0000-0000-000000000029"
+  publisher: verified_with_blocked_country_exception
+  title: "Default Banner"
+  description: "Lorem Ipsum"
+  donation_amounts: [1, 10, 100]
+  default_donation: 5
+
 verified_channel_banner: &verified_channel_banner
   publisher: verified
   channel: verified
