Create Uphold cards for those who should have them
In the case that creating the Uphold Cards fails, due to a flake on the
part of the Uphold API, we should ensure that these are created in a
timely manner. This job runs nightly and checks for those who have
verified channels and Uphold connections, but who don't have cards. It
then launches a job to create them.

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -33,6 +33,9 @@
   CleanAbandonedSiteChannelsJob:
     cron: "0 3 * * *"
     description: "Remove abandoned site channels."
+  CreateUpholdCardsWhereMissingJob:
+    cron: "0 1 * * *"
+    description: "Ensure anonymous cards are created for those who need them."
   Channels::TransferChannelsJob:
     cron: "0 8 * * *"
     description: "Complete transfer of channels that have exceeded their timeout time without being rejected"
