Wording and logo updates

--- a/public/creators-landing/public/manifest.json
+++ b/public/creators-landing/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Brave Rewards | Creators",
-  "name": "Brave Rewards | Creators",
+  "short_name": "Brave Creators",
+  "name": "Brave Creators",
   "icons": [
     {
       "src": "favicon.ico",
