--- a/public/creators-landing/package.json
+++ b/public/creators-landing/package.json
@@ -48,6 +48,9 @@
     "ansi-regex": "5.0.1",
     "shell-quote": "1.7.3",
     "ansi-html": "https://registry.npmjs.org/ansi-html-community/-/ansi-html-community-0.0.8.tgz",
-    "immer": "9.0.6"
+    "immer": "9.0.6",
+    "loader-utils": "1.4.2",
+    "json5": "2.2.2",
+    "minimatch": "3.0.5"
   }
 }
