Run audit when pulling into staging or master

--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -7,8 +7,10 @@
 
 name: Audit
 on:
-  push:
-    branches: [ master ]
+  pull_request:
+    branches:
+      - master
+      - staging
 jobs:
   audit:
     runs-on: ubuntu-latest
