Got the tests running, 45 failures to go

--- a/test/fixtures/gemini_connections.yml
+++ b/test/fixtures/gemini_connections.yml
@@ -18,13 +18,15 @@ connection_with_token:
   is_verified: true
   recipient_id: <%= SecureRandom.uuid %>
   <% salt = SecureRandom.random_bytes(12) %>
-  encrypted_access_token:  "<%= TotpRegistration.encrypt_secret(
+  encrypted_access_token:  "<%= GeminiConnection.attr_encrypted_encrypt(
+    'access_token',
     'access_token',
     key: GeminiConnection.encryption_key,
     iv: salt
   ) %>"
   encrypted_access_token_iv: "<%= Base64.encode64(salt) %>"
-  encrypted_refresh_token:  "<%= TotpRegistration.encrypt_secret(
+  encrypted_refresh_token:  "<%= GeminiConnection.attr_encrypted_encrypt(
+    'access_token',
     'access_token',
     key: GeminiConnection.encryption_key,
     iv: salt
@@ -39,13 +41,15 @@ connection_not_verified:
   is_verified: false
   status: 'Active'
   <% salt = SecureRandom.random_bytes(12) %>
-  encrypted_access_token:  "<%= TotpRegistration.encrypt_secret(
+  encrypted_access_token:  "<%= GeminiConnection.attr_encrypted_encrypt(
+    'access_token',
     'access_token',
     key: GeminiConnection.encryption_key,
     iv: salt
   ) %>"
   encrypted_access_token_iv: "<%= Base64.encode64(salt) %>"
-  encrypted_refresh_token:  "<%= TotpRegistration.encrypt_secret(
+  encrypted_refresh_token:  "<%= GeminiConnection.attr_encrypted_encrypt(
+    'access_token',
     'access_token',
     key: GeminiConnection.encryption_key,
     iv: salt
