--- a/test/fixtures/bitflyer_connections.yml
+++ b/test/fixtures/bitflyer_connections.yml
@@ -2,13 +2,15 @@ enabled_bitflyer_connection:
   publisher: bitflyer_pub
   recipient_id: 'bitflyer_pub_connectionABC'
   <% salt = SecureRandom.random_bytes(12) %>
-  encrypted_access_token:  "<%= TotpRegistration.encrypt_secret(
+  encrypted_access_token:  "<%=  BitflyerConnection.attr_encrypted_encrypt(
+    'access_token',
     'access_token',
     key: BitflyerConnection.encryption_key,
     iv: salt
   ) %>"
   encrypted_access_token_iv: "<%= Base64.encode64(salt) %>"
-  encrypted_refresh_token:  "<%= TotpRegistration.encrypt_secret(
+  encrypted_refresh_token:  "<%=  BitflyerConnection.attr_encrypted_encrypt(
+    'access_token',
     'access_token',
     key: BitflyerConnection.encryption_key,
     iv: salt
