--- a/test/fixtures/uphold_connections.yml
+++ b/test/fixtures/uphold_connections.yml
@@ -9,7 +9,8 @@ base_verified_connection: &base_verified_connection
   status: "ok"
   country: "US"
   send_emails: 2019-01-01
-  encrypted_uphold_access_parameters:  "<%= TotpRegistration.encrypt_secret(
+  encrypted_uphold_access_parameters:  "<%= UpholdConnection.attr_encrypted_encrypt(
+  'uphold_access_parameters',
     { scope: 'cards:write' }.to_json,
     key: Rails.application.secrets[:attr_encrypted_key].byteslice(0, 32),
     iv: salt
@@ -40,7 +41,8 @@ youtube_initial_connection:
   publisher: youtube_initial
   country: 'US'
   uphold_verified: true
-  encrypted_uphold_access_parameters: "<%= TotpRegistration.encrypt_secret(
+  encrypted_uphold_access_parameters: "<%= UpholdConnection.attr_encrypted_encrypt(
+  'uphold_access_parameters',
     '{}',
     key: Rails.application.secrets[:attr_encrypted_key].byteslice(0, 32),
     iv: salt
@@ -120,7 +122,8 @@ google_connection:
   address: "abcdabcd-0000-0000-0000-abcd00000006"
   status: "ok"
   uphold_id: 7946e100-8abf-4361-b50b-240bbe5511dc
-  encrypted_uphold_access_parameters:  "<%= TotpRegistration.encrypt_secret(
+  encrypted_uphold_access_parameters:  "<%= UpholdConnection.attr_encrypted_encrypt(
+  'uphold_access_parameters',
     { scope: 'cards:write', access_token: '222', refresh_token: '123', 'expires_in': 3599, 'expiration_time': 3599.seconds.from_now.to_s }.to_json,
     key: Rails.application.secrets[:attr_encrypted_key].byteslice(0, 32),
     iv: salt
@@ -135,7 +138,8 @@ basic_connection:
   address: "abcdabcd-0000-0000-0000-abcd00000006"
   status: "ok"
   uphold_id: 7946e100-8abf-4361-b50b-240bbe5511dc
-  encrypted_uphold_access_parameters:  "<%= TotpRegistration.encrypt_secret(
+  encrypted_uphold_access_parameters:  "<%= UpholdConnection.attr_encrypted_encrypt(
+  'uphold_access_parameters',
     { scope: 'cards:write', access_token: '333' }.to_json,
     key: Rails.application.secrets[:attr_encrypted_key].byteslice(0, 32),
     iv: salt
@@ -150,7 +154,8 @@ details_connection:
 blocked_connection:
   status: blocked
   publisher: uphold_connected_blocked
-  encrypted_uphold_access_parameters:  "<%= TotpRegistration.encrypt_secret(
+  encrypted_uphold_access_parameters:  "<%= UpholdConnection.attr_encrypted_encrypt(
+  'uphold_access_parameters',
     { scope: 'cards:write', access_token: '111', refresh_token: '123', 'expires_in': 3599, 'expiration_time': 3599.seconds.from_now.to_s }.to_json,
     key: Rails.application.secrets[:attr_encrypted_key].byteslice(0, 32),
     iv: salt
@@ -165,7 +170,8 @@ restricted_member:
   status: "restricted"
   uphold_id: 7946e100-8abf-4361-b50b-240bbe5511dc
   send_emails: 2019-01-01
-  encrypted_uphold_access_parameters:  "<%= TotpRegistration.encrypt_secret(
+  encrypted_uphold_access_parameters:  "<%= UpholdConnection.attr_encrypted_encrypt(
+  'uphold_access_parameters',
     { scope: 'cards:write', access_token: '444' }.to_json,
     key: Rails.application.secrets[:attr_encrypted_key].byteslice(0, 32),
     iv: salt
@@ -174,7 +180,8 @@ restricted_member:
 
 verified_no_currency:
   uphold_verified: true
-  encrypted_uphold_access_parameters:  "<%= TotpRegistration.encrypt_secret(
+  encrypted_uphold_access_parameters:  "<%= UpholdConnection.attr_encrypted_encrypt(
+    'uphold_access_parameters',
     { scope: 'cards:write', access_token: '555' }.to_json,
     key: Rails.application.secrets[:attr_encrypted_key].byteslice(0, 32),
     iv: salt
