--- a/test/fixtures/user_authentication_tokens.yml
+++ b/test/fixtures/user_authentication_tokens.yml
@@ -3,7 +3,8 @@
 default_user_authentication_token: &default_user_authentication_token
   authentication_token_expires_at: "<%= DateTime.now + PublisherTokenGenerator::TOKEN_TTL %>"
   encrypted_authentication_token_iv: "<%= Base64.encode64(salt) %>"
-  encrypted_authentication_token: "<%= UserAuthenticationToken.encrypt_authentication_token(
+  encrypted_authentication_token: "<%= UserAuthenticationToken.attr_encrypted_encrypt(
+    "authentication_token",
     "authentication_token",
     key: UserAuthenticationToken.encryption_key,
     iv: salt
