--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
     "@types/styled-components": "^5.1.0",
+    "@webpack-cli/serve": "^2.0.1",
     "audit-ci": "6.6.1",
     "autoprefixer": "^9.4.3",
     "babel-core": "7.0.0-bridge.0",
@@ -120,7 +121,7 @@
     "tslint-react": "^3.6.0",
     "typescript": "^4.3.5",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "~3"
   },
   "resolutions": {
     "node-fetch": "2.6.7",
